# tbe

./: .gitignore
.github/workflows/: python-test.yml
c/: CMakeLists.txt  README.md
c/include/: tbe.h
c/src/: main.c
c/src/functions/: isolate_header.c  output_TBE.c
c_tbe/: Makefile  strip_header.c  strip_header.h  strip_header_test  test.c
c_tbe/strip_header_test.dSYM/Contents/: Info.plist
c_tbe/strip_header_test.dSYM/Contents/Resources/DWARF/: strip_header_test
c_tbe/strip_header_test.dSYM/Contents/Resources/Relocations/aarch64/: strip_header_test.yml
python/: README.md
python/src/functions/: bdf_utils.py
python/src/tests/: test_tbe_file_operations.py
python_tbe/python_conv/: tbe_header_parser.py  test_duplicate_key_tbe.csv  test_invalid_format_tbe.csv  test_missing_title_tbe.csv  test_tbe_header_parser.py  test_valid_tbe.csv
python_tbe_archive/python_conv/: ebs_read_tbe.py
python_tbe_archive/tests/: test_tbe_file_operations.py
r/: README.md
r/src/functions/: read_directory.r
